--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -87,8 +87,8 @@
   name = "github.com/mreiferson/go-options"
 
 [[override]]
-  version = "v1.3.1"
-  name = "gopkg.in/fsnotify.v1"
+  version = "v1.4.7"
+  name = "github.com/fsnotify/fsnotify"
 
 [[constraint]]
   branch = "master"
